# BoxScore

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt
src/BSio/: BSFile.cpp  BSFile.h  BSListData.h  BSMessage.h  BSRun.cpp  BSRun.h  TCPConnection.h  TCPServer.cpp  TCPServer.h
src/Core/: Application.cpp  Application.h  BSProject.cpp  BSProject.h  BoxScoreCore.h  DataDistributor.cpp  DataDistributor.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  ProjectSerializer.cpp  ProjectSerializer.h  RingBuffer.cpp  RingBuffer.h  ScalarDistributor.cpp  ScalarDistributor.h  ThreadSafeQueue.h  Window.h  main.cpp
src/DAQ/: AcquisitionLayer.cpp  AcquisitionLayer.h  Digitizer.cpp  Digitizer.h  DigitizerChain.cpp  DigitizerChain.h  DigitizerDefs.cpp  DigitizerDefs.h  Synchronize.cpp  Synchronize.h
src/Editor/: DigitizerPanel.cpp  DigitizerPanel.h  EditorLayer.cpp  EditorLayer.h  FileDialog.cpp  FileDialog.h  ScalarPanel.cpp  ScalarPanel.h  ScopePanel.cpp  ScopePanel.h  SyncDialog.cpp  SyncDialog.h
src/Events/: AcqEvent.h  AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLWindow.cpp  OpenGLWindow.h
src/Renderer/: GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  RendererAPI.cpp  RendererAPI.h
src/oldCore/: BoxScore.c  HelioArray.h  HelioTarget.h  IsoDetect.h  MCPClass.h
